--- a/app/src/main/res/layout/activity_otter_benchmark.xml
+++ b/app/src/main/res/layout/activity_otter_benchmark.xml
@@ -9,9 +9,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".OtterBenchmark">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"/>
+    <ListView
+        android:id="@+id/test_item_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
