--- a/app/src/main/res/layout/activity_network_test.xml
+++ b/app/src/main/res/layout/activity_network_test.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="URL:" />
+            android:text="@string/network_url" />
 
         <Spinner
             android:id="@+id/url_spinner"
@@ -28,7 +28,7 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="Connection Time:" />
+            android:text="@string/network_connection_time" />
 
         <TextView
             android:id="@+id/connection_time"
@@ -36,7 +36,7 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="File Size:" />
+            android:text="@string/network_file_size" />
 
         <TextView
             android:id="@+id/file_size"
@@ -44,7 +44,7 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="Elapsed Time:" />
+            android:text="@string/network_elapsed_time" />
 
         <TextView
             android:id="@+id/elapsed_time"
@@ -52,7 +52,7 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="Download Speed:" />
+            android:text="@string/network_download_speed" />
 
         <TextView
             android:id="@+id/download_speed"
@@ -60,12 +60,11 @@
 
         <TextView
             android:layout_gravity="end"
-            android:text="Status:" />
+            android:text="@string/network_status" />
 
         <TextView
             android:id="@+id/status"
             android:layout_gravity="fill_horizontal" />
-
     </GridLayout>
 
     <Button
@@ -73,13 +72,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="TEST START" />
+        android:text="@string/test_start" />
 
     <Button
         android:id="@+id/test_cancel"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="TEST CANCEL" />
-
+        android:text="@string/test_cancel" />
 </LinearLayout>
